# ChaCha20-Poly1305

./: .clang-format  .clangd  .gitignore  .gitmodules  ChaCha20-Poly1305.cpp  ChaCha20-Poly1305.hpp  ChaCha20.cpp  ChaCha20.hpp  Header-Mode-ChaCha20-Poly1305.hpp  Header-Only-ChaCha20-Poly1305.hpp  LICENSE  QuarterRound_test.cpp  aarch64test  header-build.cpp  int-128-256.hpp  makefile  my-notes.md  readme.md  static-build.cpp  staticlib  uint128.cpp  uint128.hpp  uint128t.cpp  uint256.cpp  uint256.hpp  uint256_f.hpp  uint320.cpp  uint512.cpp
.github/workflows/: build.yml  clang.yml  gcc-gnu.yml  mingw32.yml  mingw64.yml  msvc.yml  sanitizer.yml  test.yml
tests/: BlockFunction_test.cpp  BlockFunction_test1.cpp  BlockFunction_test2.cpp  BlockFunction_test3.cpp  BlockFunction_test4.cpp  BlockFunction_test5.cpp  CMakeLists.txt  ChaCha20Encryption_t1.cpp  ChaCha20Encryption_t2.cpp  ChaCha20Encryption_t3.cpp  ChaCha20Poly1305_decrypt.cpp  ChaCha20Poly1305_decrypt_nonceV.cpp  ChaChaQuarterRound_test.cpp  Encryption_test.cpp  Poly1305_keygen_t1.cpp  Poly1305_keygen_t2.cpp  Poly1305_keygen_t3.cpp  Poly1305_mac_t1.cpp  Poly1305_mac_t10.cpp  Poly1305_mac_t11.cpp  Poly1305_mac_t2.cpp  Poly1305_mac_t3.cpp  Poly1305_mac_t4.cpp  Poly1305_mac_t5.cpp  Poly1305_mac_t6.cpp  Poly1305_mac_t7.cpp  Poly1305_mac_t8.cpp  Poly1305_mac_t9.cpp  QuarterRound_test.cpp  a_test_template.cpp  addition.cpp  chacha20_aead_enc_dec.cpp  comparison.cpp  comparison.cpp.disable  constructor.cpp  division.cpp  division.cpp.disable  int128_add_test.cpp  int128_addition_test.cpp  int128_comparisons_test.cpp  (+30 more)
